Fix mobile overflow and set custom site title/favicon

--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,20 @@
   color-scheme: dark;
 }
 
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   @apply bg-onyx text-silver overflow-x-hidden overflow-y-hidden;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
 }
 
 #root {
